modify the sonar file

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,13 +1,9 @@
 # Required metadata
-sonar.projectKey=java-sonar-runner-simple
-sonar.projectName=Simple Java project analyzed with the SonarQube Runner
-sonar.projectVersion=1.0
-
-# Comma-separated paths to directories with sources (required)
-sonar.sources=src
-
-# Language
-sonar.language=java
-
 # Encoding of the source files
 sonar.sourceEncoding=UTF-8
+sonar.projectKey=TEST-PROJECT
+sonar.projectName=TEST-PROJECT
+sonar.projectVersion=1.0
+sonar.sources=src/main/java/
+sonar.language=java
+sonar.java.binaries=target/classes 
